# flask-autodoc

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README  README.md  README.txt  changelog.md  pyproject.toml  run_tests.py  setup.py
.github/workflows/: minimal-test.yml  poetry-prerelease.yml  poetry-publish.yml  poetry-test.yml  publish-prerelease.yml  publish.yml  test.yml
examples/: blog.py
examples/custom/: blog.py
examples/custom/templates/: autodoc_custom.html  custom_doc.html
examples/factory/: app.py
examples/factory/blog/: __init__.py  admin.py  doc.py  frontend.py
examples/restless-api/: blog.py
examples/rst/: app.py
examples/rst/templates/: rst.html
examples/simple/: blog.py
flask_autodoc/: __init__.py  autodoc.py
flask_autodoc/templates/: autodoc_default.html  autodoc_interactive.html
flask_selfdoc/: __init__.py  autodoc.py
flask_selfdoc/templates/: autodoc_default.html
tests/: check_example.py  config.py  test_autodoc.py  test_check_example.py  test_error_handling.py  test_flask_get.py
tests/files/: builtin.json  custom.html  custom.json  factory.html  simple.html  simple.json  simple_private.html
